--- a/style.css
+++ b/style.css
@@ -6,6 +6,7 @@ body{
     background-color: #111111;
     color: antiquewhite;
     text-align: center;
+    padding: 1%;
 }
 header{
     text-align: right;
