--- a/gametest.css
+++ b/gametest.css
@@ -2,13 +2,12 @@ body{
 	background-color: black;
 }
 canvas{
-  border: 1px solid;
-  border-color: #CCCCCC;
+	border-bottom: 5px solid;
+	border-color: #333;
+	border-radius: 5px;
   background-color: black;
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);    
+	margin: auto;
+	display: block;
 }
 img{
   display: none;
